tests/neg/namespace-import-branch/test.stk
namespace test.lib

type A = Int

fun double(n: A): A = n + n
